# SLAM-KinectFusion

./: CMakeLists.txt  README.md  main.cpp
dataset/: README.txt  intr.txt
doc/: poses.txt
kfusion/include/: MicrosoftKinect.h  cuda_array.hpp  depth_sensor.h  device_array.hpp  device_memory.hpp  device_types.hpp  device_utils.cuh  file.h  icp_registration.hpp  kinectfusion.h  safe_call.hpp  tsdf_volume.hpp  types.hpp
kfusion/src/: MicrosoftKinect.cpp  depth_sensor.cpp  device_memory.cpp  file.cpp  file.cu  icp_registration.cpp  image_process.cu  kinectfusion.cpp  rigid_icp.cu  tsdf_volume.cpp  tsdf_volume.cu
